# tessellator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  alhambra.tessellator.out.vtp  tmp_exported_alhambra.vtp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-release.yml  build-and-test.yml  test-fuse-releases.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Launcher.h  VTKParser.cpp  VTKParser.h  launcher.cpp  launcher.h  tessellator.cpp  vtkIO.cpp  vtkIO.h
src/cgal/: CMakeLists.txt  Delaunator.cpp  Manifolder.cpp  Manifolder.h  Repairer.cpp
src/cgal/filler/: Filler.cpp  Filler.h  FillerTools.cpp  FillerTools.h  SegmentsArray.cpp  SegmentsArray.h  Slice.cpp  Slice.h
src/core/: CMakeLists.txt  Collapser.cpp  Collapser.h  Slicer.cpp  Slicer.h  Smoother.cpp  Smoother.h  SmootherTools.cpp  SmootherTools.h  Snapper.cpp  Snapper.h  SnapperOptions.h  Staircaser.cpp  Staircaser.h  Structurer.cpp  Structurer.h
src/drivers/: CMakeLists.txt  Driver.cpp  DriverBase.cpp  DriverBase.h  DriverInterface.h  DriverOptions.h  OffgridDriver.cpp  OffgridDriver.h  OffgridDriverOptions.h  StructuredDriver.cpp  StructuredDriver.h
src/meshers/: CMakeLists.txt  ConformalMesher.cpp  ConformalMesher.h  ConformalMesherOptions.h  MesherBase.cpp  MesherBase.h  MesherInterface.h  OffgridMesher.cpp  OffgridMesher.h  OffgridMesherOptions.h  StaircaseMesher.cpp  StructuredMesher.cpp  StructuredMesher.h
src/tessellator/: Driver.cpp  Driver.h  DriverBase.cpp  DriverBase.h  Slicer.cpp  StructuredDriver.cpp  StructuredDriver.h  Structurer.cpp  Structurer.h
src/tessellator/filler/: Slice.cpp
src/types/: CellIndex.h  Mesh.h  Mesher.h  Vector.h
src/utils/: CMakeLists.txt  Cleaner.cpp  Cleaner.h  ConvexHull.cpp  ConvexHull.h  Geometry.cpp  Geometry.h  GridTools.cpp  GridTools.h  MeshTools.cpp  MeshTools.h  RedundancyCleaner.cpp  RedundancyCleaner.h  Types.h
test/: CMakeLists.txt  MeshFixtures.h
test/app/: LauncherTest.cpp  VTKParserTest.cpp  launcherTest.cpp  vtkIOTest.cpp
test/cgal/: ArrangmentTest.cpp  DelaunatorTest.cpp  HPolygonSetTest.cpp  LSFPlaneTest.cpp  ManifolderTest.cpp  PolyhedronToolsTest.cpp  RepairerTest.cpp
test/cgal/filler/: FillerTest.cpp  FillerToolsTest.cpp
test/core/: CDTOgreTest.cpp  CollapserTest.cpp  SelectiveStructurerTest.cpp  SlicerTest.cpp  SmootherTest.cpp  SmootherToolsTest.cpp  SnapperTest.cpp  StaircaserTest.cpp  StructurerTest.cpp
test/drivers/: DriverTest.cpp  OffgridDriverTest.cpp  StructuredDriverTest.cpp
test/meshers/: ConformalMesherTest.cpp  OffgridMesherTest.cpp  StaircaseMesherTest.cpp  StructuredMesherTest.cpp
test/tessellator/: DriverTest.cpp  SlicerTest.cpp  StructuredDriverTest.cpp  StructurerTest.cpp
test/utils/: CleanerTest.cpp  ConvexHullTest.cpp  GeometryTest.cpp  GridToolsTest.cpp  MeshToolsTest.cpp  RedundancyCleanerTest.cpp
testData/: alhambra.stl  cervezas_alhambra.vtk
testData/cases/: .gitignore  alhambra.tessellator.json
testData/cases/alhambra/: alhambra.conformal.tessellator.json  alhambra.stl  alhambra.tessellator.json
testData/cases/cone/: cone.conformal.tessellator.json  cone.stl  cone.tessellator.json
testData/cases/sphere/: sphere.conformal.tessellator.json  sphere.stl  sphere.tessellator.json
testData/cases/thinCylinder/: thinCylinder.conformal.tessellator.json  thinCylinder.stl  thinCylinder.tessellator.json
